--- a/DNAOrderApp/order/templates/order/base_template.html
+++ b/DNAOrderApp/order/templates/order/base_template.html
@@ -20,15 +20,19 @@
 		<!-- Placed at the end of the document so the pages load faster -->
 		<!-- local version of jquery -->
 		<!--script src="../../static/bootstrap/js/jquery-1.9.1.min.js"></script-->
-		<script src="../../static/bootstrap/js/jquery-1.9.1.js"></script>
-		<script src="../../static/bootstrap/js/bootstrap.min.js"></script>
-		<script src="../../static/bootstrap/js/jquery.form.js"></script> 
+		
+		<!-- active -->
+		<!--script src="../../static/bootstrap/js/jquery-1.9.1.js"></script-->
+		<!--script src="../../static/bootstrap/js/bootstrap.min.js"></script-->
+		<!--script src="../../static/bootstrap/js/jquery.form.js"></script--> 
 		<!--script src="http://malsup.github.io/jquery.form.js"></script--> 
+		<!--script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script-->
+
+		<!-- TESTING -->
+		<script src="{{ STATIC_URL }}bootstrap/js/jquery-1.9.1.js"></script>
+		<script src="{{ STATIC_URL }}bootstrap/js/jquery.form.js"></script> 
 		<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
 		{% block extra_css_js %}{% endblock extra_css_js %}
-	
-
 		
 		
 		<!-- Bootstrap CSS Toolkit styles-->
@@ -39,7 +43,9 @@
 		<!--<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">-->
 
 		<!-- Bootstrap styles for responsive website layout, different screen sizes -->
-		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+		<!--script src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script-->
+		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js"></script>
 
 		<!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
     	<!--<link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-image-gallery.min.css">-->
@@ -56,7 +62,6 @@
 			<div class="navbar-inner">
 				<div class="container">
 					
-					
 					<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 						<span class="icon-bar"></span>
@@ -66,11 +71,11 @@
 					</a>
 					
 					<!-- keep the brand outside if want to be shown -->
-					<a class="brand" href="#">DNA Order Application</a>
+					<a class="brand" href="index">DNA Order Application</a>
 					
 					<!-- Everything you want hidden at 940px or less, place within here -->
 					<div class="nav-collapse collapse">
-						<ul class="nav pull-left">
+						<ul class="nav pull-right">
 							<!-- THIS IS THE NAVIGATION BAR, TOP-LEFT -->
 							{% block active-navbar %}
 							{% endblock active-navbar %}
@@ -97,7 +102,7 @@
 			</div>
 		</div>
 		
-		<div class="container">
+		<!--div class="container" -->
 		
 			{% block content %}
 			{% if messages %}
@@ -114,9 +119,11 @@
 
 			{% endblock %}
 			
-			<footer>
-				<p>&copy; Wellcome Trust Sanger Institute 2013, HGI Team</p>
-			</footer>
-		</div>
+			<div class="container">
+				<footer>
+					<p>&copy; Wellcome Trust Sanger Institute 2013, HGI Team</p>
+				</footer>
+			</div>
+		<!--/div-->
 	</body>
 </html>
