--- a/DNAOrderApp/order/templates/order/manifest_upload.html
+++ b/DNAOrderApp/order/templates/order/manifest_upload.html
@@ -29,7 +29,7 @@
 
 		<!-- Upload form. Note enctype attribute! -->
 		<!-- Binding uploaded files to a form -->
-		<form action="{% url manifest-upload %}" method="post" enctype="multipart/form-data">
+		<form action="{% url "manifest-upload" %}" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
 			<p>{{ form.non_field_errors }}</p>
 			<p>{{ form.docfile.label_tag }} {{ form.docfile.help_text }}</p>
