--- a/DNAOrderApp/order/templates/order/pheno-select.html
+++ b/DNAOrderApp/order/templates/order/pheno-select.html
@@ -177,13 +177,13 @@ A SAMPLESUBMISSIONPHENOTYPE TABLE WILL GO HERE!!!
 	<h3> Add A Phenotype </h3>
 	<b>NOTE: PHENOTYPE DEFINITION CAN USE THE TAG-IT FEATURE http://aehlke.github.io/tag-it/ </b>
 	<br />
-	<form class="add_a_phenotype" method="post" action="{% url pheno-select %}">
+	<form class="add_a_phenotype" method="post" action="{% url "pheno-select" %}">
 		{% csrf_token %}
 		<table>
 			{{ phenotypeForm }}
 		</table>
 		<br />
-		<button id="add-pheno" class="btn btn-primary" type="submit" action="{% url pheno-select %}">Create a Phenotype</button>
+		<button id="add-pheno" class="btn btn-primary" type="submit" action="{% url "pheno-select" %}">Create a Phenotype</button>
 	</form>
 </div>
 
